<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.HospitalActivity">

    <data/>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_background_profile">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="620dp"
            android:fillViewport="true">
    
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_topbar"
                    android:translationZ="90dp"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:id="@+id/linear_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="24dp"
                            android:paddingBottom="12dp">

                            <ImageView
                                android:id="@+id/iv_virus"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="16dp"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:srcCompat="@drawable/icons_virus" />

                            <TextView
                                android:id="@+id/tvAkun"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="24dp"
                                android:fontFamily="@font/montserrat"
                                android:text="@string/rumah_sakit"
                                android:textColor="@color/dark_blue"
                                android:textSize="25sp"
                                android:textStyle="bold"
                                app:layout_constraintStart_toEndOf="@+id/iv_virus"
                                app:layout_constraintTop_toTopOf="parent" />
                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <fragment
                    android:id="@+id/hospital_map"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="32dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_detail_hospital"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginHorizontal="30dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:cardCornerRadius="4dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:padding="15dp"
                        android:layout_gravity="center_horizontal"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_title"
                            android:layout_width="300dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:text="@string/nama_rs"
                            android:textColor="@color/colorPrimaryVariant"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/tv_alamat_label"
                                android:layout_width="120dp"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="4dp"
                                android:text="@string/alamat_label"
                                android:textColor="@color/soft_cyan"
                                android:textSize="14sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tv_alamat"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="4dp"
                                android:text="@string/alamat"
                                android:textColor="@color/colorPrimaryVariant"
                                android:textSize="14sp"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/tv_nomor_telp_label"
                                android:layout_width="120dp"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="4dp"
                                android:text="@string/nomor_telp_label"
                                android:textColor="@color/soft_cyan"
                                android:textSize="14sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tv_nomor_telp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="4dp"
                                android:text="@string/nomor_telp"
                                android:textColor="@color/colorPrimaryVariant"
                                android:textSize="14sp"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/tv_kota_label"
                                android:layout_width="120dp"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="4dp"
                                android:text="@string/kota_kabupaten_label"
                                android:textColor="@color/soft_cyan"
                                android:textSize="14sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tv_kota"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="4dp"
                                android:text="@string/kota_kabupaten"
                                android:textColor="@color/colorPrimaryVariant"
                                android:textSize="14sp"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/tv_provinsi_label"
                                android:layout_width="120dp"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="4dp"
                                android:text="@string/provinsi_label"
                                android:textColor="@color/soft_cyan"
                                android:textSize="14sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tv_provinsi"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="4dp"
                                android:text="@string/provinsi"
                                android:textColor="@color/colorPrimaryVariant"
                                android:textSize="14sp"/>
                        </LinearLayout>


                    </LinearLayout>

                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </ScrollView>

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottom_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:fabCradleMargin="10dp"
            android:background="@color/white"
            android:backgroundTint="@color/white">

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottomNav"
                app:labelVisibilityMode="unlabeled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:background="@color/white"
                android:backgroundTint="@color/white"
                app:menu="@menu/bottom_nav_menu"
                android:textAlignment="center" />

        </com.google.android.material.bottomappbar.BottomAppBar>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_awesome_map_marker_alt"
            app:layout_anchor="@id/bottom_menu">

        </com.google.android.material.floatingactionbutton.FloatingActionButton>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>