<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data/>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_background_profile">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="620dp"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_topbar"
                    android:translationZ="90dp"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:id="@+id/linear_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="24dp"
                            android:paddingBottom="12dp">

                            <ImageView
                                android:id="@+id/iv_virus"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="16dp"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:srcCompat="@drawable/icons_virus" />

                            <TextView
                                android:id="@+id/tvAkun"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="24dp"
                                android:fontFamily="@font/montserrat"
                                android:text="@string/akun"
                                android:textColor="@color/dark_blue"
                                android:textSize="25sp"
                                android:textStyle="bold"
                                app:layout_constraintStart_toEndOf="@+id/iv_virus"
                                app:layout_constraintTop_toTopOf="parent" />
                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvHeader"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:cardCornerRadius="4dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingHorizontal="30dp"
                        android:paddingVertical="15dp">

                        <ImageView
                            android:id="@+id/iv_avatar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:scaleX="0.8"
                            android:scaleY="0.8"
                            app:srcCompat="@drawable/user" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tvName"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/open_sans"
                                android:text="@string/name_profile"
                                android:textColor="@color/dark_gray"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tvStatus"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/open_sans"
                                android:text="@string/status_profile"
                                android:textColor="@color/dark_gray"
                                android:textSize="12sp" />

                        </LinearLayout>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvBody"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:cardCornerRadius="4dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:paddingHorizontal="30dp"
                            android:paddingVertical="15dp">

                            <ImageView
                                android:id="@+id/ivEnvelope"
                                android:layout_width="40dp"
                                android:layout_height="wrap_content"
                                android:scaleX="0.8"
                                android:scaleY="0.8"
                                app:srcCompat="@drawable/icon_material_email" />

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="15dp"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/tvLabelEmail"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/open_sans"
                                    android:text="@string/email_label"
                                    android:textColor="@color/dark_gray"
                                    android:textSize="16sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:id="@+id/tvEmail"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/open_sans"
                                    android:text="@string/email"
                                    android:textColor="@color/dark_gray"
                                    android:textSize="12sp" />

                            </LinearLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:paddingHorizontal="30dp"
                            android:paddingVertical="15dp">

                            <ImageView
                                android:id="@+id/ivPin"
                                android:layout_width="40dp"
                                android:layout_height="wrap_content"
                                android:scaleX="0.8"
                                android:scaleY="0.8"
                                app:srcCompat="@drawable/pin" />

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="15dp"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/tvLabelAlamat"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/open_sans"
                                    android:text="@string/alamat_label"
                                    android:textColor="@color/dark_gray"
                                    android:textSize="16sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:id="@+id/tvAlamat"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/open_sans"
                                    android:text="@string/alamat"
                                    android:textColor="@color/dark_gray"
                                    android:textSize="12sp" />

                            </LinearLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:paddingHorizontal="30dp"
                            android:paddingVertical="15dp">

                            <ImageView
                                android:id="@+id/ivChat"
                                android:layout_width="40dp"
                                android:layout_height="wrap_content"
                                android:scaleX="0.8"
                                android:scaleY="0.8"
                                app:srcCompat="@drawable/chat_bubble" />

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="15dp"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/tvLabelProfile"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/open_sans"
                                    android:text="@string/profile_label"
                                    android:textColor="@color/dark_gray"
                                    android:textSize="16sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:id="@+id/tvProfile"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/open_sans"
                                    android:text="@string/profile"
                                    android:textColor="@color/dark_gray"
                                    android:textSize="12sp" />

                            </LinearLayout>
                        </LinearLayout>

                        <ImageView
                            android:id="@+id/btEdit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="30dp"
                            android:layout_marginBottom="15dp"
                            app:srcCompat="@drawable/bt_edit" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <ImageView
                    android:id="@+id/btLogout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginVertical="30dp"
                    app:srcCompat="@drawable/bt_logout" />

            </LinearLayout>
        </ScrollView>

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottom_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:fabCradleMargin="10dp"
            android:background="@color/white"
            android:backgroundTint="@color/white">

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottomNav"
                app:labelVisibilityMode="unlabeled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:background="@color/white"
                android:backgroundTint="@color/white"
                app:menu="@menu/bottom_nav_menu"
                android:textAlignment="center" />

        </com.google.android.material.bottomappbar.BottomAppBar>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_awesome_map_marker_alt"
            app:layout_anchor="@id/bottom_menu">

        </com.google.android.material.floatingactionbutton.FloatingActionButton>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>